<resources>
    <string name="app_name">내동생</string>
    <string name="site">www.nedongsang.com</string>
    <string name="nav_mypage">마이페이지</string>
    <string name="nav_item">중고거래</string>
    <string name="nav_errand">심부름</string>
    <string name="nav_coin">COIN</string>
    <string name="nav_chat">채팅</string>
    <string name="nav_map">지도</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="nav_open_drawer">Open Navigation</string>
    <string name="nav_close_drawer">Close Navigation</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>